[package]
name = "aoc23"
version = "0.1.0"
edition = "2021"


[lib]
name = "aoc23"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
regex = "1.10.2"
itertools = "0.12.0"
glam = "0.24.2"
nom = "7.1.3"
log = "0.4.20"
